--- a/app/views/food_logs/_form.html.haml
+++ b/app/views/food_logs/_form.html.haml
@@ -1,28 +1,9 @@
-= form_for @food_log do |f|
-  - if @food_log.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@food_log.errors.count, "error")} prohibited this food_log from being saved:"
-      %ul
-        - @food_log.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :food_name
-    = f.text_field :food_name
-  .field
-    = f.label :carbs
-    = f.text_field :carbs
-  .field
-    = f.label :fat
-    = f.text_field :fat
-  .field
-    = f.label :protein
-    = f.text_field :protein
-  .field
-    = f.label :consumed_at
-    = f.datetime_select :consumed_at
-  .field
-    = f.label :user_id
-    = f.number_field :user_id
-  .actions
-    = f.submit 'Save'
+= simple_form_for @food_log do |f|
+ = f.input :food_name, label: 'Weight (in pounds)'
+ = f.input :measured_at
+ = f.input :carbs, label: 'Carbs (carbs - fiber)'
+ = f.input :fat
+ = f.input :protein
+ = f.input :consumed_at
+ = f.input :user_id
+ = f.button :submit
