--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,28 +1,8 @@
-= form_for @user do |f|
-  - if @user.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@user.errors.count, "error")} prohibited this user from being saved:"
-      %ul
-        - @user.errors.full_messages.each do |msg|
-          %li= msg
-
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :start_weight
-    = f.text_field :start_weight
-  .field
-    = f.label :goal_weight
-    = f.text_field :goal_weight
-  .field
-    = f.label :current_weight
-    = f.text_field :current_weight
-  .field
-    = f.label :height
-    = f.text_field :height
-  .actions
-    = f.submit 'Save'
+= simple_form_for @user do |f|
+ = f.input :name
+ = f.input :email
+ = f.input :sex, label: 'Sex (M or F)'
+ = f.input :start_weight, label: 'Start Weight (in pounds)'
+ = f.input :goal_weight, label: 'Goal Weight (in pounds)'
+ = f.input :height, label: 'Height (in inches)'
+ = f.button :submit
