--- a/app/assets/stylesheets/globals/layout.css.sass
+++ b/app/assets/stylesheets/globals/layout.css.sass
@@ -18,6 +18,8 @@ html
 
 body
   min-height: 100%
+  background-color: $off-white
+  +box-shadow(inset $off-white-shadow 0 0 5em)
 
 .wrapper
   width: 90%
@@ -36,7 +38,11 @@ h3
   font-weight: normal
 
 p
+  margin-bottom: 0.5em
   font-size: 1.5em
+
+b
+  font-size: 1em
 
 a
   background-color: white
