--- a/app/views/water_logs/index.html.haml
+++ b/app/views/water_logs/index.html.haml
@@ -14,10 +14,10 @@
       %td= water_log.volume
       %td= water_log.consumed_at
       %td= water_log.user_id
-      %td= link_to 'Show', water_log
-      %td= link_to 'Edit', edit_water_log_path(water_log)
-      %td= link_to 'Destroy', water_log, :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %td= link_to 'Show', user_water_log_path(@user, water_log)
+      %td= link_to 'Edit', edit_user_water_log_path(@user, water_log)
+      %td= link_to 'Destroy', user_water_log_path(@user, water_log), :method => :delete, :data => { :confirm => 'Are you sure?' }
 
 %br
 
-= link_to 'New Water log', new_water_log_path
+= link_to 'New Water log', new_user_water_log_path(@user)
