--- a/app/assets/stylesheets/globals/layout.css.sass
+++ b/app/assets/stylesheets/globals/layout.css.sass
@@ -44,9 +44,16 @@ p
 b
   font-size: 1em
 
+th, td, label, input, select
+  font-size: 1.5em
+
+p, td, h1
+  a
+    font-size: 1em
+
 a
   background-color: white
-  font-size: 1em
+  font-size: 1.5em
   &:hover
     background-color: $red
     color: white
