--- a/app/assets/stylesheets/globals/layout.css.sass
+++ b/app/assets/stylesheets/globals/layout.css.sass
@@ -52,7 +52,7 @@ p, td, h1
     font-size: 1em
 
 a
-  background-color: white
+  background-color: transparent
   font-size: 1.5em
   &:hover
     background-color: $red
