--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -19,21 +19,22 @@
   %b Height:
   = @user.height
 
-= link_to 'Edit', edit_user_path(@user)
-\|
-= link_to 'Add Water Log', new_user_water_log_path(@user)
-\|
-= link_to 'Add Food Log', new_user_food_log_path(@user)
-\|
-= link_to 'Add Weight Log', new_user_weight_log_path(@user)
-\|
-= link_to 'Back', users_path
 
+= link_to 'Back', users_path
 %br
+
+- if current_user && @user == current_user
+  = link_to 'Edit', edit_user_path(@user)
+  \|
+  = link_to 'Add Water Log', new_user_water_log_path(@user)
+  \|
+  = link_to 'Add Food Log', new_user_food_log_path(@user)
+  \|
+  = link_to 'Add Weight Log', new_user_weight_log_path(@user)
+  %br
 
 = link_to 'Water Logs', user_water_logs_path(@user)
 \|
 = link_to 'Food Logs', user_food_logs_path(@user)
 \|
 = link_to 'Weight Logs', user_weight_logs_path(@user)
-\|
