Fix User data conversions.

--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -4,7 +4,7 @@
  = f.input :password
  = f.input :password_confirmation
  = f.input :sex, label: 'Sex (M or F)'
- = f.input :start_weight, label: 'Start Weight (in pounds)'
- = f.input :goal_weight, label: 'Goal Weight (in pounds)'
- = f.input :height, label: 'Height (in inches)'
+ = f.input :start_weight_in_lbs, label: 'Start Weight (in pounds)'
+ = f.input :goal_weight_in_lbs, label: 'Goal Weight (in pounds)'
+ = f.input :height_in_inches, label: 'Height (in inches)'
  = f.button :submit
