Allow new fields to be used in params.

--- a/app/views/water_logs/_form.html.haml
+++ b/app/views/water_logs/_form.html.haml
@@ -1,5 +1,5 @@
 = simple_form_for [@user, @water_log] do |f|
- = f.input :volume, label: 'Volume (in ounces)'
+ = f.input :volume_in_ounces, label: 'Volume (in ounces)'
  = f.input :consumed_at
  = f.input :user_id, as: :hidden
  = f.button :submit
